--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Clock</title>
 	<link rel="stylesheet" type="text/css" href="./assets/style.css">
+
 </head>
 <body>
 	<div class="clock">
@@ -12,6 +13,8 @@
 			<div class="hand hand-second"></div>
 		</div>
 	</div>
+
+	<script type="text/javascript" src = "./assets/main.js"></script>
 
 </body>
 </html>
